Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128846

[126-based][macOS]Failed assertion "A command encoder is already encoding to this command buffer"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.9.0 FF
    • 6.9.0 FF, 6.9
    • WebEngine
    • None
    • macOS
    • 673272f8a (126-based), 16ad5612d (dev)

    Description

       
      This is one of the issue I found during the 126-based chromium testing.
      The one occurs frequently and I have encountered it multiple times. To reproduce it, open the developer tools, perform some operations, or wait for a while. It can also be replicated using the map example application. Also when playing the video

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-128846
          # Subject Branch Project Status CR V

          Activity

            People

              anualiyas Anu Aliyas
              anualiyas Anu Aliyas
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes