Fix crash on macOS

The recent chromium changes caches different displays and perform a
deferred wait operation, which leads to accessing command buffers from
different threads, as the QtWebengine invokes these deferred wait calls
from the main thread. The current fix attempt is to not defer the calls
and execute them on the current thread itself.

amends 2e0bedfdf9aa7d9b7d3995410b251da39eb4de91

Fixes: QTBUG-128846
Change-Id: Iaf97121a626369bdec3879a3b61b7bb20e5a9241
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/596078
Reviewed-by: Michal Klocek <michal.klocek@qt.io>